--- a/app/views/admin/total_contributions.html.erb
+++ b/app/views/admin/total_contributions.html.erb
@@ -1,6 +1,20 @@
 <section class="main-content">
   <div class="container">
-    <h2 class="page-title">Total Contributions</h2>
+    <h2 class="page-title">Total Contributions
+    <%= link_to new_monthly_contribution_path() do%>
+      <button data-toggle="tooltip" data-placement="top" title="Add New Contribution"  class="btn  btn-outline-success btn-round">
+        <span class="fa fa-plus"></span>
+      </button>
+    <% end %>
+    <button data-toggle= "modal" data-target= "#uploadContributionModal" data-placement="top" title="Upload Multiple Users" class="btn  btn-outline-info btn-round">
+      <span class="fa fa-upload"></span>
+    </button>
+    <%= link_to admin_download_contributions_csv_path(format: 'csv') do%>
+      <button data-toggle="tooltip" data-placement="top" title="Download Contributions (CSV)"  class="btn  btn-outline-danger btn-round">
+        <span class="fa fa-download"></span>
+      </button>
+    <% end %>
+    </h2>
     <div class="card">
       <div class="card-body p-lg">
       
@@ -14,11 +28,11 @@
                   <tbody>
                     <tr>
                       <td>Total Contributions</td>
-                      <td class="text-right"><strong>&#8358; 150,000</strong></td>
+                      <td class="text-right"><strong>&#8358; <%= @total_contribution %></strong></td>
                     </tr>
                     <tr>
                       <td>This Month's Contribution</td>
-                      <td class="text-right">&#8358; 15,000</td>
+                      <td class="text-right">&#8358; <%= @total_month_contribution%></td>
                     </tr>
                   </tbody>
                 </table>
@@ -42,66 +56,13 @@
                   <div class="table-money-holder">
                     <table class="table table-striped table-money">
                       <tbody>
-                        <tr>
-                          <th scope="row" class="text-center" width="15%">1</th>
-                          <td width="55%">October 2017</td>
-                          <td class="text-center" width="30%">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">2</th>
-                          <td>September 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">3</th>
-                          <td>August 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">4</th>
-                          <td>July 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">5</th>
-                          <td>June 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>May 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">7</th>
-                          <td>April 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">8</th>
-                          <td>March 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>February 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">6</th>
-                          <td>January 2017</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">9</th>
-                          <td>December 2016</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
-                        <tr>
-                          <th scope="row" class="text-center">10</th>
-                          <td>November 2016</td>
-                          <td class="text-center">15,000</td>
-                        </tr>
+                        <% @recent_contributions.each_with_index do |contribution, index| %>
+                          <tr>
+                            <th scope="row" class="text-center" width="15%"><%= index+1 %></th>
+                            <td width="55%"><%= contribution.month %> <%= contribution.year %></td>
+                            <td class="text-center" width="30%"><%= contribution.amount %></td>
+                          </tr>
+                        <% end %>
                       </tbody>
                     </table>
                   </div>
@@ -109,7 +70,7 @@
                     <thead>
                       <tr>
                         <th width="70%" colspan="2">Total</th>
-                        <th class="text-center" width="30%">150,000</th>
+                        <th class="text-center" width="30%"><%= @total_contribution %></th>
                       </tr>
                     </thead>
                   </table>
@@ -124,4 +85,4 @@
   </div>
 
 </section>
-
+<%= render "layouts/uploadcontributionsmodal", user: @user%>
