--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -1,6 +1,7 @@
 <section class="main-content">
   <div class="container">
-    <h2 class="page-title">My Contributions</h2>
+    <h2 class="page-title">My Contributions
+    </h2>
     <div class="card">
       <div class="card-body p-lg">
       
